Widgets: Fix duplicated line in QMdiArea

Replace duplicated line MaximizeAction with RestoreAction

Task-number: QTBUG-17428
Change-Id: I5120afeed6715d28045f3eee01f26ee482f02ed1
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>